fixed z-index on nav

--- a/src/_nav.scss
+++ b/src/_nav.scss
@@ -7,6 +7,7 @@ nav {
   align-items: center;
   background-color: white;
   border-bottom: 1px solid black;
+  z-index: 100;
   // box-shadow: 0px 0px 10px 1px grey;
   #drop {
     display: none;
