--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,7 @@ a:hover {
 body {
   margin: 0;
 }
+
+* {
+  scroll-behavior: smooth;
+}
